--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: black;
+}
 .title{
     background-color:lightgreen;
     height: 150px;
